mobile overflow test fix

--- a/styles.css
+++ b/styles.css
@@ -69,6 +69,9 @@ p{
 .abz-container{
     position: relative;
 }
+.body-wrap{
+    overflow-x: hidden;
+}
 .contact-container{
     display: inline-grid;
     grid-template-columns: 5% 10% 10% 10% 65%;
